@@ -1,3 +1,6 @@
+22/12/2020
+  Manage a case when device is not in RF mode to show a friendly message instead of a Python error
+
 21/12/2020
   Update licence
   Update readme
